--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -20,6 +20,15 @@
         <li class="has-sub">
         <a href="/"> <i class="fas fa-home"></i>Home</a>
         </li>
+        <li class="has-sub">
+          <a href="https://discord.com/oauth2/authorize?client_id=765088908773818378&guild_id=771518909630644274&scope=bot&permissions=8&redirect_uri=https://dash.striderbot.net/dashboard&response_type=code"> <i class="fas fa-home"></i>Invite</a>
+          </li>
+          <li class="has-sub">
+            <a href="https://docs.striderbot.net/"> <i class="fas fa-home"></i>Docs</a>
+            </li>
+            <li class="has-sub">
+              <a href="https://discord.gg/saxSvhR7GP"> <i class="fas fa-home"></i>Support</a>
+              </li>
         <li class='has-sub'>
           <a href='<%= data.user ? "/logout" : "/dashboard" %>'><i class="fas fa-cogs"></i><%= data.user ? "Logout" : "Dashboard" %></a>
         </li>
