--- a/views/partials/nav-settings.ejs
+++ b/views/partials/nav-settings.ejs
@@ -21,16 +21,16 @@
         <a href="/"> <i class="fas fa-home"></i>Home</a>
         </li>
         <li class="has-sub">
-          <a href="/settings/<%= data.guildID %>"> <i class="fas fa-home"></i>Bot Settings</a>
+          <a href="/settings/<%= data.guildID %>"> <i class="fas fa-cogs"></i>Bot Settings</a>
           </li>
           <li class="has-sub">
-            <a href="/information/<%= data.guildID %>"> <i class="fas fa-home"></i>Information</a>
+            <a href="/information/<%= data.guildID %>"> <i class="fas fa-user-plus"></i>Information</a>
             </li>
             <li class="has-sub">
-              <a href="/logs/<%= data.guildID %>"> <i class="fas fa-home"></i>Audit Logs</a>
+              <a href="/logs/<%= data.guildID %>"> <i class="fas fa-book"></i>Audit Logs</a>
               </li>
               <li class="has-sub">
-                <a href="/logout"> <i class="fas fa-home"></i>Logout</a>
+                <a href="/logout"> <i class="fab fa-discord"></i>Logout</a>
                 </li>
             </li>
           </ul>
