Added Premium Server & Beta Testers Status

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -166,6 +166,7 @@
 
 <br><br><br>
 
+
                             <div class="row m-t-30">
                               <div class="col-md-12">
                                   <!-- DATA TABLE-->
@@ -174,6 +175,30 @@
                                           <thead>
                                               <tr>
                                                   <th>Server Information</th>
+                                                  <th></th>
+                                              </tr>
+                                          </thead>
+                                          <tbody>
+                                              <tr>
+                                                  <td>Premium Status</td>
+                                                  <td>False</td>
+                                              </tr>
+                                                                                            <tr>
+                                                  <td>Beta Testers</td>
+                                                  <td>False</td>
+                                              </tr>
+                                          </tbody>
+                                      </table>
+                                  </div>
+
+                            <div class="row m-t-30">
+                              <div class="col-md-12">
+                                  <!-- DATA TABLE-->
+                                  <div class="table-responsive m-b-40">
+                                      <table class="table table-borderless table-data3">
+                                          <thead>
+                                              <tr>
+                                                  <th>Server Statistics</th>
                                                   <th></th>
                                               </tr>
                                           </thead>
