--- a/views/partials/nav-settings.ejs
+++ b/views/partials/nav-settings.ejs
@@ -70,7 +70,7 @@
                 <a href='/logs/<%= data.guildID %>'><i class="fas fa-book"></i>Audit Logs</a>
               </li>
               <li class="has-sub">
-                <a href='https://discord.gg/saxSvhR7GP'><i class="fas fa-question"></i>Support</a>
+                <a href='/giveaways/<%= data.guildID %>'><i class="fas fa-gift"></i>Giveaways</a>
               </li>
               <li>
                 <a href='<%= data.user ? "/logout" : "/auth" %>'><i class='fab fa-discord'></i> <%= data.user ? data.user.username : "Not Authenticated" %></a>
