--- a/views/information.ejs
+++ b/views/information.ejs
@@ -243,6 +243,18 @@
                                                 <td><%= data.client.guilds.cache.get(data.guildID).verificationLevel %></td>
                                             </tr>
                                             <tr>
+                                              <td>AFK Channel ID</td>
+                                              <td><%= data.client.guilds.cache.get(data.guildID).afkChannelID %></td>
+                                          </tr>
+                                          <tr>
+                                            <td>AFK Channel ID</td>
+                                            <td><%= data.client.guilds.cache.get(data.guildID).afkChannelID %></td>
+                                        </tr>
+                                        <tr>
+                                          <td>Server Region</td>
+                                          <td><%= data.client.guilds.cache.get(data.guildID).region %></td>
+                                      </tr>
+                                            <tr>
                                           </tbody>
                                       </table>
                                   </div>
