--- a/views/information.ejs
+++ b/views/information.ejs
@@ -246,13 +246,9 @@
                                               <td>AFK Channel ID</td>
                                               <td><%= data.client.guilds.cache.get(data.guildID).afkChannelID %></td>
                                           </tr>
-                                          <tr>
-                                            <td>AFK Channel ID</td>
-                                            <td><%= data.client.guilds.cache.get(data.guildID).afkChannelID %></td>
-                                        </tr>
                                         <tr>
                                           <td>Server Region</td>
-                                          <td><%= data.client.guilds.cache.get(data.guildID).region %></td>
+                                          <td><%= data.client.guilds.cache.get(data.guildID).regionml %></td>
                                       </tr>
                                             <tr>
                                           </tbody>
