--- a/views/partials/nav-settings.ejs
+++ b/views/partials/nav-settings.ejs
@@ -27,7 +27,7 @@
             <a href="/information/<%= data.guildID %>"> <i class="fas fa-user-plus"></i>Information</a>
             </li>
             <li class="has-sub">
-              <a href="/logs/<%= data.guildID %>"> <i class="fas fa-book"></i>Audit Logs</a>
+              <a href="/logs/<%= data.guildID %>"> <i class="fas fa-book"></i>Logging</a>
               </li>
               <li class="has-sub">
                 <a href="/logout"> <i class="fab fa-discord"></i>Logout</a>
@@ -67,7 +67,7 @@
                 <a href='/information/<%= data.guildID %>'><i class="fas fa-user-plus"></i>Information</a>
               </li>
               <li class="has-sub">
-                <a href='/logs/<%= data.guildID %>'><i class="fas fa-book"></i>Audit Logs</a>
+                <a href='/logs/<%= data.guildID %>'><i class="fas fa-book"></i>Logging</a>
               </li>
               <li class="has-sub">
                 <a href='/giveaways/<%= data.guildID %>'><i class="fas fa-gift"></i>Giveaways</a>
