--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -177,7 +177,7 @@
             <label for="prefix">Prefix</label>
                 <input type="text" class='form-control' name="prefix" value="<%= data.server.prefix %>"><br>
                 <hr>
-            <label>Enable Logs </label><input type="checkbox" name="logs" id="logs" <%= checked %> ><br>
+            <!-- <label>Enable Logs </label><input type="checkbox" name="logs" id="logs" <%= checked %> ><br>
             <hr>
             <label>Current Logging Channel:</label><p><%= data.logch ? data.client.channels.cache.get(data.logch).name : "No Logging Channel Set" %></p>
             <br>
@@ -187,7 +187,7 @@
                     <option class='form-control' value="<%= c.id %>"><%= c.name %></option>
                 <% }) %>
             </select><br>
-            <hr>
+            <hr> -->
             <label>Enable Welcome Channel </label><input type="checkbox" name="welcomes" id="welcomes" <%= checkedw %> >
             <hr>
             <label>Current Welcome Channel:</label><p><%= data.welcomech ? data.client.channels.cache.get(data.welcomech).name : "No Welcome Channel Set" %></p>
